--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -126,6 +126,10 @@
     color: #8b6fcb;
   }
 
+  h3.blog-filter {
+    margin-bottom: 0;
+  }
+
   @media (prefers-color-scheme: dark) {
     body {
       background-color: #333;
