--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,11 +11,12 @@
   {{- partial "seo_tags.html" . -}}
   <meta name="referrer" content="no-referrer-when-downgrade" />
 
+  {{ $css := resources.Get "style.css" | minify }}
+  <link href="{{ $css.RelPermalink }}" rel="stylesheet">
+
   {{ with .OutputFormats.Get "rss" -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
-
-  {{- partial "style.html" . -}}
 
   <!-- A partial to be overwritten by the user.
   Simply place a custom_head.html into
