--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 <content>
   {{ if .Data.Singular }}
-  <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
-  <small>
-    <a href="{{ "/blog" | relURL }}">Remove filter</a>
-  </small>
+    <h3 style="margin-bottom:0">{{ i18n "filter" }} "{{ .Title }}"</h3>
+    <small>
+      <a href="{{ i18n "posts" }}">{{ i18n "remove" }}</a>
+    </small>
   {{ end }}
   <ul class="blog-posts">
     {{ range .Pages }}
@@ -16,7 +16,11 @@
           </time>
         </i>
       </span>
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
+      {{ if .Params.link }}
+        <a href="{{ .Params.link }}">{{ .Title }}</a>
+      {{ else }}
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      {{ end }}
     </li>
     {{ else }}
     <li>
@@ -26,13 +30,11 @@
   </ul>
   {{ if .Data.Singular }}
   {{else}}
-    <small>
-      <div>
-        {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
-        {{ end }}
-      </div>
-    </small>
-    {{ end }}
+    <div>
+      {{ range .Site.Taxonomies.tags }}
+        <a class="blog-tags" href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;&nbsp;
+      {{ end }}
+    </div>
+  {{ end }}
 </content>
 {{ end }}
