--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,5 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }}
+{{ if ne .Site.Params.hideMadeWithLine true }}
+  <small>
+    {{ .Site.Copyright }} | <a href="{{ i18n "stone-link" }}">{{ i18n "stone" }}</a>
+  </small>
+{{ end }}
