--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<a href="{{ "/" | relURL }}" class="title">
+<a href="{{ i18n "home" | relURL }}" class="title">
   <h2>{{ .Site.Title }}</h2>
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
