--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,10 +1,7 @@
 {{ define "main" }}
 <content>
   {{ if .Data.Singular }}
-    <h3 style="margin-bottom:0">{{ i18n "filter" }} "{{ .Title }}"</h3>
-    <small>
-      <a href="{{ i18n "posts" }}">{{ i18n "remove" }}</a>
-    </small>
+    <h3 style="margin-bottom:0">{{ i18n "filtering-for" }} "{{ .Title }}"</h3>
   {{ end }}
   <ul class="blog-posts">
     {{ range .Pages }}
@@ -12,7 +9,7 @@
       <span>
         <i>
           <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-            {{ .Date.Format (default "02 Jan, 2006" .Site.Params.dateFormat) }}
+            {{ .Date.Format (default "2006-01-02" .Site.Params.dateFormat) }}
           </time>
         </i>
       </span>
