--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,3 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}
-  <small>
-    {{ .Site.Copyright }} | <a href="{{ i18n "stone-link" }}">{{ i18n "stone" }}</a>
-  </small>
-{{ end }}
+<small>
+  {{ .Site.Copyright }} | {{ markdownify .Site.Language.Params.params.madeWith }}
+</small>
