--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,15 +1,18 @@
-<a href={{ i18n "home" | relURL }}>Home</a>
-<a href={{ i18n "posts" }}>Blog</a>
-<a href="mailto:c@lente.dev?subject={{ i18n "reply" }}'{{ .Page.Title | default .Site.Title }}'">Email</a>
-<a href="/index.xml">RSS</a>
-
+{{ range .Site.Menus.main }}
+  <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+{{ end }}
 {{ $pageLang := .Page.Lang }}
 {{ if .IsTranslated }}
   {{ range .Translations }}
     {{ if ne $pageLang .Lang }}
-      <a href="{{ .Permalink }}">{{ i18n "other-lang" }}</a>
+      <a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a>
     {{ end }}
   {{ end }}
-{{ else }}
-  <a class="disabled" href="">{{ i18n "other-lang" }}</a>
+{{ else if not .Site.Params.hideUntranslated }}
+  <a class="disabled" href="">{{ .Language.LanguageName }}</a>
 {{ end }}
+
+<!-- <a href={{ i18n "home" | relURL }}>Home</a>
+<a href={{ i18n "posts" }}>Blog</a>
+<a href="mailto:c@lente.dev?subject={{ i18n "reply" }}'{{ .Page.Title | default .Site.Title }}'">Email</a>
+<a href="/index.xml">RSS</a> -->
