--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,8 +11,11 @@
   {{- partial "seo_tags.html" . -}}
   <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  {{ $css := resources.Get "style.css" | minify }}
-  <link href="{{ $css.RelPermalink }}" rel="stylesheet">
+  {{ $style := resources.Get "style.css" | minify }}
+  <link href="{{ $style.RelPermalink }}" rel="stylesheet">
+
+  {{ $syntax := resources.Get "syntax.css" | minify }}
+  <link href="{{ $syntax.RelPermalink }}" rel="stylesheet">
 
   {{ with .OutputFormats.Get "rss" -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
