--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,2 +1,2 @@
-<a href="{{ site.Home.Permalink }}" class="title"><h2>{{ .Site.Title }}</h2></a>
+<a href="{{ relURL .Site.Home.Permalink }}" class="title"><h2>{{ .Site.Title }}</h2></a>
 <nav>{{- partial "nav.html" . -}}</nav>
