--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,11 @@
   {{ $syntax := resources.Get "syntax.css" | minify }}
   <link href="{{ $syntax.RelPermalink }}" rel="stylesheet">
 
+  {{ with .Params.style }}
+    {{ $extra := resources.Get . | minify }}
+    <link href="{{ $extra.RelPermalink }}" rel="stylesheet">
+  {{ end }}
+
   {{ with .OutputFormats.Get "rss" -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
