Add social links to config

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,9 @@
 {{ range .Site.Menus.main.ByWeight }}
   <a href="{{ relLangURL .URL }}">{{ .Name }}</a>
 {{ end }}
-<a href='mailto:{{ .Site.Params.email }}?subject={{ i18n "email-subject" }}"{{ default .Site.Title .Page.Title }}"'>Email</a>
+{{ with .Site.Social.email }}
+<a href='mailto:{{ . }}?subject={{ i18n "email-subject" }}"{{ default $.Site.Title $.Page.Title }}"'>Email</a>
+{{ end }}
 <a href="{{ .Site.Language.Params.params.blogPath }}/index.xml">RSS</a>
 
 <!-- Convert this page's translations into a dict -->
