Dynamically generated social cards

--- a/layouts/partials/seo_tags.html
+++ b/layouts/partials/seo_tags.html
@@ -3,11 +3,15 @@
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <meta name="keywords" content="{{ if .IsPage}}{{ range $index, $tag := .Params.tags }}{{ $tag }},{{ end }}{{ else }}{{ range $plural, $terms := .Site.Taxonomies }}{{ range $term, $val := $terms }}{{ printf "%s," $term }}{{ end }}{{ end }}{{ end }}" />
 
-<!-- Open Graph / Facebook -->
-{{ template "_internal/opengraph.html" . }}
+{{ if (default false .Site.Params.generateSocialCard) }}
+  {{ partial "social_card.html" . }}
+{{ else }}
+  <!-- Open Graph / Facebook -->
+  {{ template "_internal/opengraph.html" . }}
 
-<!-- Twitter -->
-{{ template "_internal/twitter_cards.html" . }}
+  <!-- Twitter -->
+  {{ template "_internal/twitter_cards.html" . }}
 
-<!-- Microdata -->
-{{ template "_internal/schema.html" . }}
+  <!-- Microdata -->
+  {{ template "_internal/schema.html" . }}
+{{ end }}
