Add Herman style

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,7 +14,7 @@
 </content>
 <p>
   {{ range (.GetTerms "tags") }}
-    <a class="blog-tags" href="{{ .Permalink }}">#{{ .LinkTitle }}</a>&nbsp;&nbsp;
+    <a class="blog-tags" href="{{ .Permalink }}">#{{ .LinkTitle }}</a>
   {{ end }}
 </p>
 {{ end }}
