--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
   {{- partial "seo_tags.html" . -}}
   <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  {{ $style := resources.Get "style.css" | minify }}
+  {{ $style := resources.Get "herman.css" | minify }}
   <link href="{{ $style.RelPermalink }}" rel="stylesheet">
 
   {{ $syntax := resources.Get "syntax.css" | minify }}
