--- a/assets/herman.css
+++ b/assets/herman.css
@@ -69,25 +69,21 @@ img {
 h1,
 h2,
 h3,
-h4,
-h5 {
+h4 {
   font-weight: 700;
   line-height: 1.3;
 }
 
 h1 {
-  font-size: calc(var(--size) * 5.7);
+  font-size: calc(var(--size) * 4.2);
 }
 h2 {
-  font-size: calc(var(--size) * 4.3);
+  font-size: calc(var(--size) * 3.4);
 }
 h3 {
-  font-size: calc(var(--size) * 3.2);
+  font-size: calc(var(--size) * 2.6);
 }
 h4 {
-  font-size: calc(var(--size) * 2.4);
-}
-h5 {
   font-size: calc(var(--size) * 1.8);
 }
 
@@ -106,13 +102,13 @@ blockquote {
   max-width: 50ch;
 }
 
-:is(h1, h2, h3, h4, h5, blockquote) {
+:is(h1, h2, h3, h4, blockquote) {
   margin-block-end: calc(var(--spacing) / 2);
 }
-:is(h1, h2, h3, h4, h5) + * {
+:is(h1, h2, h3, h4) + * {
   margin-block-start: calc(var(--spacing) / 3);
 }
-:is(h1, h2, h3, h4, h5) + :where(h2, h3, h4, h5) {
+:is(h1, h2, h3, h4) + :where(h2, h3, h4) {
   margin-block-start: calc(var(--spacing) * 2);
 }
 
@@ -120,7 +116,7 @@ blockquote {
   text-decoration: none;
 }
 .title h1 {
-  font-size: calc(var(--size) * 3.2);
+  font-size: calc(var(--size) * 3.4);
   margin-top: calc(var(--spacing) / 2);
 }
 
@@ -176,11 +172,5 @@ td {
   ul.blog-posts li {
     flex-direction: row;
     gap: calc(var(--spacing) / 2);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  :root {
-    --size: 0.9rem;
   }
 }
