--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -28,7 +28,7 @@
   {{ if not .Data.Singular }}
     <div>
       {{ range .Site.Taxonomies.tags }}
-        <a class="blog-tags" href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;&nbsp;
+        <a class="blog-tags" href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>
       {{ end }}
     </div>
   {{ end }}
