Update social cards

--- a/assets/herman.css
+++ b/assets/herman.css
@@ -1,6 +1,6 @@
 :root {
   font-size: 62.5%; /* 10px */
-  --color-dark: #181a20; /* 1a1a1a */
+  --color-dark: #181a20;
   --color-light: #fafafa;
   --color-primary: #1a8fe3;
   --size: 1rem;
