--- a/layouts/partials/social_card.html
+++ b/layouts/partials/social_card.html
@@ -5,7 +5,7 @@
 
 {{ $fg = $fg.Filter (images.Text .Title (dict
     "font" $font
-    "color" "#f8f8f2"
+    "color" "#fafafa"
     "size" 130
     "linespacing" 20
     "x" 0
@@ -18,7 +18,7 @@
 
 {{ $fg = $fg.Filter (images.Text $byline (dict
     "font" $font
-    "color" "#c9d1d9"
+    "color" "#898a8d"
     "size" 60
     "linespacing" 30
     "x" 0
