--- a/assets/style.css
+++ b/assets/style.css
@@ -145,3 +145,18 @@ h3.blog-filter {
   cursor: not-allowed;
   opacity: 0.7;
 }
+
+/*  "skip to main content"  link */
+.skiplink {
+  position: absolute;
+  top: 5;
+  transform: translateY(-600%);
+  transition: transform 0.5s;
+  background-color: #121212;
+  font-size: larger;
+  padding: 6px;
+}
+
+.skiplink:focus {
+  transform: translateY(0%);
+}
