--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,2 +1,4 @@
+<a class="skiplink" href="#maincontent">Skip to Main Content</a>
+
 <a href="{{ relURL .Site.Home.Permalink }}" class="title"><h1>{{ .Site.Title }}</h1></a>
 <nav>{{- partial "nav.html" . -}}</nav>
