Update deprecated parameters use

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,1 @@
-<small>
-  {{ .Site.Copyright }} | {{ markdownify .Site.Language.Params.params.madeWith }}
-</small>
+<small> {{ .Site.Copyright }} | {{ markdownify .Site.Params.madeWith }} </small>
