--- a/assets/style.css
+++ b/assets/style.css
@@ -146,17 +146,16 @@ h3.blog-filter {
   opacity: 0.7;
 }
 
-/*  "skip to main content"  link */
-.skiplink {
+/* "Skip to main content" link */
+.skip-link {
   position: absolute;
   top: 5;
   transform: translateY(-600%);
   transition: transform 0.5s;
-  background-color: #121212;
-  font-size: larger;
+  background-color: #1d1f27;
   padding: 6px;
 }
 
-.skiplink:focus {
+.skip-link:focus {
   transform: translateY(0%);
 }
