--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,7 +36,7 @@
   <header>
     {{- partial "header.html" . -}}
   </header>
-  <main id="maincontent">
+  <main id="main-content">
     {{- block "main" . }}{{- end }}
   </main>
   <footer>
