--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,10 @@
 {{ range .Site.Menus.main.ByWeight }}
-  <a href="{{ relLangURL .URL }}">{{ .Name }}</a>
+  <a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
 {{ with .Site.Social.email }}
 <a href='mailto:{{ . }}?subject={{ i18n "email-subject" }}"{{ default $.Site.Title $.Page.Title }}"'>Email</a>
 {{ end }}
-<a href="{{ .Site.Params.blogPath }}/index.xml">RSS</a>
+<a href="{{ relLangURL .Site.Params.blogPath }}/index.xml">RSS</a>
 
 <!-- Convert this page's translations into a dict -->
 {{ $translations := dict }}
