Improved RSS template

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 {{ range .Site.Menus.main.ByWeight }}
   <a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
-<a href="{{ relLangURL .Site.Params.blogPath }}/index.xml">RSS</a>
+<a href='{{ absURL "index.xml" }}'>RSS</a>
 
 <!-- Convert this page's translations into a dict -->
 {{ $translations := dict }}
