--- a/assets/style.css
+++ b/assets/style.css
@@ -146,6 +146,10 @@ h3.blog-filter {
   opacity: 0.7;
 }
 
+p.byline {
+  font-style: italic;
+}
+
 /* "Skip to main content" link */
 .skip-link {
   position: absolute;
