--- a/layouts/partials/social_card.html
+++ b/layouts/partials/social_card.html
@@ -1,7 +1,7 @@
 <!-- Dynamic social card generation -->
 {{ $font := resources.GetRemote "https://github.com/google/fonts/raw/main/ofl/firamono/FiraMono-Bold.ttf" }}
-{{ $fg := resources.Get "/images/social_card_fg.png"}}
-{{ $bg := resources.Get "/images/social_card_bg.png"}}
+{{ $fg := resources.Get "images/social_card_fg.png"}}
+{{ $bg := resources.Get "images/social_card_bg.png"}}
 
 {{ $fg = $fg.Filter (images.Text .Title (dict
     "font" $font
