Customize figure style

--- a/assets/style.css
+++ b/assets/style.css
@@ -163,3 +163,15 @@ p.byline {
 .skip-link:focus {
   transform: translateY(0%);
 }
+
+figure {
+  margin-inline-start: 0em;
+  margin-inline-end: 0em;
+}
+
+figcaption > p {
+  margin-block-start: 0px;
+  text-align: center;
+  font-style: italic;
+  color: #ccc;
+}
