--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,7 +13,7 @@
 </content>
 <p>
   {{ range (.GetTerms "tags") }}
-    <a class="blog-tags" href="{{ .Permalink }}">#{{ lower .LinkTitle }}</a>
+    <a class="blog-tags" href="{{ .RelPermalink }}">#{{ lower .LinkTitle }}</a>
   {{ end }}
 </p>
 {{ with .Site.Params.author.email }}
