--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,11 +16,13 @@
     <a class="blog-tags" href="{{ .RelPermalink }}">#{{ lower .LinkTitle }}</a>
   {{ end }}
 </p>
+{{ if not .Params.hideReply }}
 {{ with .Site.Params.author.email }}
   <p>
     <a href='mailto:{{ . }}?subject={{ i18n "email-subject" }}"{{ default $.Site.Title $.Page.Title }}"'>
       {{ i18n "email-reply" }} ↪
     </a>
   </p>
+{{ end }}
 {{ end }}
 {{ end }}
