--- a/assets/original.css
+++ b/assets/original.css
@@ -1,29 +1,18 @@
 body {
-  font-family: Verdana, sans-serif;
+  font-family: var(--font-family);
   margin: auto;
   padding: 20px;
   max-width: 720px;
   text-align: left;
-  background-color: #1d1f27;
+  background-color: var(--color-bg);
   word-wrap: break-word;
   overflow-wrap: break-word;
   line-height: 1.5;
-  color: #c9d1d9;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-  color: #eee;
+  color: var(--color-primary);
 }
 
 a {
-  color: #8cc2dd;
+  color: var(--color-accent-1);
 }
 
 .title {
@@ -33,6 +22,7 @@ a {
 .title h1 {
   font-size: 24px;
   margin: 19.92px 0 19.92px 0;
+  color: var(--color-primary);
 }
 
 .title span {
@@ -43,16 +33,25 @@ nav a {
   margin-right: 10px;
 }
 
+header {
+  padding-bottom: 25px;
+}
+
+:is(h1, h2, h3, h4, h5, h6) > a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 textarea {
-  background-color: #252525;
-  color: #ddd;
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
   width: 100%;
   font-size: 16px;
 }
 
 input {
-  background-color: #252525;
-  color: #ddd;
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
   font-size: 16px;
 }
 
@@ -69,7 +68,7 @@ th,
 td {
   border: 1px solid;
   border-collapse: collapse;
-  border-color: #c9d1d9;
+  border-color: var(--color-primary);
   padding: 5px;
 }
 
@@ -79,8 +78,8 @@ img {
 
 code {
   padding: 2px 5px;
-  color: #f8f8f2;
-  background-color: #282a36;
+  color: var(--color-primary-light);
+  background-color: var(--color-secondary);
 }
 
 pre code {
@@ -93,8 +92,8 @@ pre code {
 }
 
 blockquote {
-  border-left: 1px solid #999;
-  color: #ccc;
+  border-left: 1px solid var(--color-secondary);
+  color: var(--color-primary);
   padding-left: 20px;
   font-style: italic;
 }
@@ -105,7 +104,7 @@ footer {
 }
 
 .helptext {
-  color: #aaa;
+  color: var(--color-primary);
   font-size: small;
 }
 
@@ -130,7 +129,7 @@ ul.blog-posts li span {
 }
 
 ul.blog-posts li a:visited {
-  color: #8b6fcb;
+  color: var(--color-accent-2);
 }
 
 a.blog-tags {
@@ -158,7 +157,7 @@ p.byline {
   top: 5;
   transform: translateY(-600%);
   transition: transform 0.5s;
-  background-color: #1d1f27;
+  background-color: var(--color-secondary);
   padding: 6px;
 }
 
@@ -175,5 +174,26 @@ figcaption > p {
   margin-block-start: 0px;
   text-align: center;
   font-style: italic;
-  color: #ccc;
+  color: var(--color-primary);
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.avatar-container {
+  align-self: center;
+  margin: 20px;
+}
+
+.avatar-image {
+  border-radius: 100%;
+  max-width: 200px;
+}
+
+@media (max-width: 500px) {
+  .row {
+    flex-direction: column;
+  }
 }
