--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,29 @@
 {{ define "main" }}
-{{ .Content }}
+<div class="row">
+    {{ with resources.Get .Site.Params.avatarImage }}
+        <div class="avatar-container">
+            <img src="{{ .Permalink }}" class="avatar-image" alt="{{ $.Site.Params.avatarImageAlt }}" width="200" height="200"/>
+        </div>
+    {{ end }}
+    <div>
+        {{ .Content }}
+    </div>
+</div>
+
+{{ if not .Site.Params.home.hideRecent }}
+    {{ partial "recent_posts.html" . }}
+{{ end }}
+
+{{ if not .Site.Params.home.hideFeatured }}
+    {{ partial "featured_posts.html" . }}
+{{ end }}
+
+{{ if not .Site.Params.home.hideTags }}
+    <div>
+      {{ range .Site.Taxonomies.tags }}
+        <a class="blog-tags" href="{{ .Page.RelPermalink }}">#{{ lower .Page.Title }}</a>
+      {{ end }}
+    </div>
+{{ end }}
+
 {{ end }}
