--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <small>
-  {{ .Site.Copyright }} | {{ markdownify .Site.Params.madeWith }}
+    {{ .Site.Params.Copyright }} | {{ markdownify .Site.Params.madeWith }}
 </small>
