--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <small>
-    {{ .Site.Params.Copyright }} | {{ markdownify .Site.Params.madeWith }}
+    {{ markdownify .Site.Params.Copyright }} | {{ markdownify
+    .Site.Params.madeWith }}
 </small>
