--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <small>
-    {{ markdownify .Site.Params.Copyright }} | {{ markdownify
-    .Site.Params.madeWith }}
+    {{ markdownify .Site.Params.Copyright }} | {{
+    markdownify.Site.Params.madeWith }}
 </small>
